[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visitor-intel"
version = "0.1.0"
description = "B2B visitor intelligence — ICP scoring from IP, behavior, company URL, LinkedIn, and client-similarity signals. No LLM required."
readme = "README.md"
license = "MIT"
authors = [{ name = "Percepto AI", email = "pruthvi@perceptoai.com" }]
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/Wing-e7/visitor-intel"
"Bug Tracker" = "https://github.com/Wing-e7/visitor-intel/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
